# fediplug

./: LICENSE.md  README.md  pyproject.toml  test_fediplug.py
fediplug/: __init__.py  __main__.py  buttplugio.py  cli.py  dirs.py  keyring.py  mastodon.py
